@@ -1,1 +1,9 @@
+## -*-mode: python; fill-column: 75; encoding: utf-8; coding: utf-8-unix -*-
+
 from .files import *
+
+try:
+    from .execs import *
+except ImportError:
+    # These are in testing
+    pass
