@@ -4,25 +4,41 @@ import sys
 import os
 
 from behave import step
-from behaving.personas.persona import persona_vars
 
 # These are just for proof of concept
 # Maybe use the vocabulary from RobotFramework:
+#   Or add it as synonyms.
 #   I don't like the aruba vocabulary.
 
+@step(u'Assert that the directory "{uDir}" exists')
 @step(u'Assert the directory "{uDir}" exists')
-def vAssert_the_directory_exists(context, uDir):
+def bAssert_the_directory_exists(context, uDir):
     uDir = os.path.expandvars(uDir)
     assert os.path.exists(uDir), "os.path.exists(%r)" % (uDir,)
     # This follows symbolic links
     assert os.path.isdir(uDir), "os.path.isdir(%r)" % (uDir,)
+    return True
 
+@step(u'Assert that the file "{uFile}" exists')
 @step(u'Assert the file "{uFile}" exists')
-def vAssert_the_file_exists(context, uFile):
+def bAssert_the_file_exists(context, uFile):
     uFile = os.path.expandvars(uFile)
     assert os.path.exists(uFile), "os.path.exists(%r)" % (uFile,)
     # This follows symbolic links
     assert os.path.isfile(uFile), "os.path.isfile(%r)" % (uFile,)
+    return True
+
+@step(u'Ensure the directory "{uDir}" exists')
+@step(u'Ensure that the directory "{uDir}" exists')
+def bEnsure_the_directory_exists(context, uDir):
+    uDir = os.path.expandvars(uDir)
+    if os.path.isdir(uDir): return True
+    if os.path.exists(uDir):
+        # dead symlink et.al.
+        raise RuntimeError("os.path.exists(%r) but is not a directory" % (uDir,))
+    os.makedirs(uDir)
+    return os.path.isdir(uDir)
+
 
 # These are to help to define our vocabulary, even before coding it.
 
@@ -47,4 +63,27 @@ def vAssert_the_directory_contains_glob(context, uDir, uGlob):
 
 # FixMe: filenames in a table and the inverses of the above
 
+@step(u'Write to the file "{uFile}" the lines following')
+def vWrite_to_the_file_the_lines(context, uFile):
+    pass
+
+@step(u'Write to the file "{uFile}" with environ substitution the lines following')
+def vWrite_to_the_file_with_environ(context, uFile):
+    pass
+
+@step(u'Write to the file "{uFile}" with context substitution the lines following')
+def vWrite_to_the_file_with_context(context, uFile):
+    pass
+
+@step(u'Append to the file "{uFile}" the lines following')
+def vAppend_to_the_file_the_lines(context, uFile):
+    pass
+
+@step(u'Append to the file "{uFile}" with environ substitution the lines following')
+def vAppend_to_the_file_with_environ(context, uFile):
+    pass
+
+@step(u'Append to the file "{uFile}" with context substitution the lines following')
+def vAppend_to_the_file_with_context(context, uFile):
+    pass
 
